# pp-shared-py

./: .gitignore  LLM_MEMORY.md  README.md  pyproject.toml
.claude/: memory.md
pp_shared/: __init__.py  log_setup.py  sentry_setup.py  token_cascade.py  vision.py
pp_shared/sheets/: __init__.py  audit.py
pp_shared/telegram/: __init__.py  app.py  auto_delete.py  keyboard.py  rate_limit.py
pp_shared/watcher/: __init__.py  notify.py  poller.py
scripts/: sheet_auditor.py
tests/: test_log_setup.py  test_sentry_setup.py  test_token_cascade.py
